--- a/aieBootstrap-master/AIE Physics/AIE Physics.vcxproj
+++ b/aieBootstrap-master/AIE Physics/AIE Physics.vcxproj
@@ -169,6 +169,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AIE_PhysicsApp.cpp" />
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="GameState.cpp" />
@@ -183,6 +184,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIE_PhysicsApp.h" />
+    <ClInclude Include="App.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Circle.h" />
     <ClInclude Include="GameState.h" />
