--- a/aieBootstrap-master/AIE Physics/AIE Physics.vcxproj.filters
+++ b/aieBootstrap-master/AIE Physics/AIE Physics.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Spring.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Softbody.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIE_PhysicsApp.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Spring.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Softbody.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
