--- a/aieBootstrap-master/CamTutorial/CamTutorial.vcxproj
+++ b/aieBootstrap-master/CamTutorial/CamTutorial.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C48EB398-A069-4F84-B8FD-33D2695CEA6A}</ProjectGuid>
+    <ProjectGuid>{E00D592F-C541-4D55-80F6-5D4BABA90087}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Graphics</RootNamespace>
+    <RootNamespace>CamTutorial</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -165,27 +165,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="GraphicsApp.cpp" />
+    <ClCompile Include="CamTutorialApp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="OBJMesh.cpp" />
-    <ClCompile Include="Planet.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="SolarSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="GraphicsApp.h" />
-    <ClInclude Include="Mesh.h" />
-    <ClInclude Include="OBJMesh.h" />
-    <ClInclude Include="Planet.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="SolarSystem.h" />
-    <ClInclude Include="tiny_obj_loader.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\bin\shaders\simple.frag" />
-    <None Include="..\bin\shaders\simple.vert" />
+    <ClInclude Include="CamTutorialApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
