--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=25,55
+Pos=44,144
 Size=429,82
+Collapsed=0
+
+[Speed Settings]
+Pos=78,39
+Size=321,69
 Collapsed=0
 
