--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=73,126
+Pos=53,122
 Size=429,82
 Collapsed=0
 
 [Speed Settings]
 Pos=78,39
 Size=321,69
+Collapsed=0
+
+[Local Transform]
+Pos=622,97
+Size=418,122
 Collapsed=0
 
