--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=53,122
+Pos=20,415
 Size=429,82
 Collapsed=0
 
 [Speed Settings]
-Pos=78,39
+Pos=37,193
 Size=321,69
 Collapsed=0
 
 [Local Transform]
-Pos=788,94
+Pos=624,226
 Size=418,122
+Collapsed=0
+
+[Object Local Transform]
+Pos=60,61
+Size=345,87
 Collapsed=0
 
