--- a/aieBootstrap-master/Graphics/Graphics.vcxproj
+++ b/aieBootstrap-master/Graphics/Graphics.vcxproj
@@ -194,8 +194,16 @@
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\bin\shaders\normalMap.frag" />
+    <None Include="..\bin\shaders\normalMap.vert" />
+    <None Include="..\bin\shaders\phong.frag" />
+    <None Include="..\bin\shaders\phong.vert" />
+    <None Include="..\bin\shaders\post.frag" />
+    <None Include="..\bin\shaders\post.vert" />
     <None Include="..\bin\shaders\simple.frag" />
     <None Include="..\bin\shaders\simple.vert" />
+    <None Include="..\bin\shaders\textured.frag" />
+    <None Include="..\bin\shaders\textured.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
