newObj and starting particles

--- a/aieBootstrap-master/Graphics/Graphics.vcxproj
+++ b/aieBootstrap-master/Graphics/Graphics.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OBJMesh.cpp" />
+    <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Instance.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OBJMesh.h" />
+    <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="Planet.h" />
     <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="Scene.h" />
@@ -194,6 +196,8 @@
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\bin\shaders\advancePost.frag" />
+    <None Include="..\bin\shaders\advancePost.vert" />
     <None Include="..\bin\shaders\normalMap.frag" />
     <None Include="..\bin\shaders\normalMap.vert" />
     <None Include="..\bin\shaders\phong.frag" />
