--- a/aieBootstrap-master/Graphics/Graphics.vcxproj
+++ b/aieBootstrap-master/Graphics/Graphics.vcxproj
@@ -202,6 +202,8 @@
     <None Include="..\bin\shaders\normalMap.vert" />
     <None Include="..\bin\shaders\phong.frag" />
     <None Include="..\bin\shaders\phong.vert" />
+    <None Include="..\bin\shaders\phongExt.frag" />
+    <None Include="..\bin\shaders\phongExt.vert" />
     <None Include="..\bin\shaders\post.frag" />
     <None Include="..\bin\shaders\post.vert" />
     <None Include="..\bin\shaders\simple.frag" />
