--- a/aieBootstrap-master/Graphics/Graphics.vcxproj.filters
+++ b/aieBootstrap-master/Graphics/Graphics.vcxproj.filters
@@ -142,5 +142,11 @@
     <None Include="..\bin\shaders\advancePost.vert">
       <Filter>Shader</Filter>
     </None>
+    <None Include="..\bin\shaders\phongExt.frag">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="..\bin\shaders\phongExt.vert">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
