--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=20,415
+Pos=161,604
 Size=429,82
 Collapsed=0
 
 [Speed Settings]
-Pos=62,134
+Pos=1107,16
 Size=156,63
 Collapsed=0
 
@@ -19,7 +19,12 @@ Size=418,122
 Collapsed=0
 
 [Object Local Transform]
-Pos=231,17
-Size=339,109
+Pos=39,10
+Size=362,117
+Collapsed=0
+
+[Bunny Local Transform]
+Pos=10,173
+Size=225,60
 Collapsed=0
 
