--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=161,604
+Pos=146,615
 Size=429,82
 Collapsed=0
 
@@ -19,12 +19,27 @@ Size=418,122
 Collapsed=0
 
 [Object Local Transform]
-Pos=39,10
+Pos=581,22
 Size=362,117
 Collapsed=0
 
 [Bunny Local Transform]
-Pos=10,173
-Size=225,60
+Pos=49,266
+Size=319,99
+Collapsed=0
+
+[Raygun Local Transform]
+Pos=50,16
+Size=273,100
+Collapsed=0
+
+[Spear Local Transform]
+Pos=56,119
+Size=266,105
+Collapsed=0
+
+[particles Settings]
+Pos=762,447
+Size=499,261
 Collapsed=0
 
