--- a/aieBootstrap-master/bin/imgui.ini
+++ b/aieBootstrap-master/bin/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Light Settings]
-Pos=146,615
+Pos=753,560
 Size=429,82
 Collapsed=0
 
@@ -19,13 +19,13 @@ Size=418,122
 Collapsed=0
 
 [Object Local Transform]
-Pos=581,22
-Size=362,117
+Pos=301,365
+Size=368,243
 Collapsed=0
 
 [Bunny Local Transform]
 Pos=49,266
-Size=319,99
+Size=309,97
 Collapsed=0
 
 [Raygun Local Transform]
@@ -39,7 +39,17 @@ Size=266,105
 Collapsed=0
 
 [particles Settings]
-Pos=762,447
-Size=499,261
+Pos=776,170
+Size=490,266
+Collapsed=0
+
+[Camera Settings]
+Pos=958,13
+Size=150,112
+Collapsed=0
+
+[Instances]
+Pos=123,36
+Size=506,211
 Collapsed=0
 
